Fix white space below footer

--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,7 +1,19 @@
 .noContent {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
 	font-style: italic;
 	color: #8c9aad;
 	margin: 0 auto;
 	padding: 0;
 	text-align: center;
+	min-height: calc(100vh - 6rem);
+}
+
+.contentContainer {
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	min-height: calc(100vh - 6rem);
 }
